Fix vertical alignment of group name on event pages

--- a/packages/lesswrong/styles/_localgroups.scss
+++ b/packages/lesswrong/styles/_localgroups.scss
@@ -137,11 +137,6 @@ $lw-green: #588f27;
   margin-bottom: 20px;
 }
 
-.posts-page-group-details {
-  text-align: center;
-  margin-bottom: 10px;
-}
-
 /* Experimental: Somewhat hacky solution to get rid of close window in google Info Windows */
 .gm-style-iw + div {display: none;}
 
